# groq-test

./: README.md  pyproject.toml
src/analysis_crew/: analysis_crew.py  crew.py  main.py  report_generation_crew.py
src/analysis_crew/config/: agents.yaml  tasks.yaml
src/analysis_crew/files/: tesla.csv  tesla.xlsx
src/analysis_crew/tools/: code_execution_tool.py  csv_analysis_tool.py  generate_markdown_report_tool.py
